templates-networkpolicies/my-network-policy-sample2.yml
#===============================================
# WARNING This policy is a sample
# DO NOT use this policy without understanding its effects.
# Use your configurations instead.
#===============================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${CP4BA_INST_CR_NAME}-${CP4BA_INST_NAMESPACE}-cp4a-egress-allow-ldap"
  namespace: "${CP4BA_INST_NAMESPACE}"
  labels:
    app.kubernetes.io/component: Operator
    app.kubernetes.io/instance: ${CP4BA_INST_CR_NAME}
    app.kubernetes.io/managed-by: Operator
    app.kubernetes.io/name: ${CP4BA_INST_CR_NAME}-platform-egress
    app.kubernetes.io/version: ${CP4BA_INST_APPVER}
    release: ${CP4BA_INST_APPVER}

spec:
  podSelector:
    matchLabels:
      com.ibm.cp4a.networking/egress-allow-ldap: 'true'
  egress:

    - to:
      - ipBlock:
          cidr: "172.30.221.58/32"
      ports:
        - protocol: TCP  
          port: 389
     
    - to:
      - ipBlock:
          cidr: "::/128" 
      ports:
        - protocol: TCP  
          port: 389

  policyTypes:
    - Egress
