templates-networkpolicies/my-network-policy-sample3.yaml
#===============================================
# WARNING This policy is a sample
# DO NOT use this policy without understanding its effects.
# Use your configurations instead.
#===============================================
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "${CP4BA_INST_CR_NAME}-cp4a-ingress-allow-opensearch"
  namespace: "${CP4BA_INST_NAMESPACE}"
  labels:
    app.kubernetes.io/component: Operator
    app.kubernetes.io/instance: ${CP4BA_INST_CR_NAME}
    app.kubernetes.io/managed-by: Operator
    app.kubernetes.io/name: ${CP4BA_INST_CR_NAME}-platform-ingress
    app.kubernetes.io/version: ${CP4BA_INST_APPVER}
    release: ${CP4BA_INST_APPVER}

spec:
  podSelector:
    matchLabels:
      app: ibm-opensearch
  ingress:
    - ports:
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 2112
  policyTypes:
    - Ingress
